# Hemiciclo

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  Makefile  README.md  SECURITY.md  VALIDATOR_BRIEF.md  install.bat  install.sh  pyproject.toml  run.bat  run.sh  uninstall.bat  uninstall.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  topico.md
.github/workflows/: adr-check.yml  ci.yml  release.yml  stale.yml
.streamlit/: config.toml
docs/: manifesto.md
docs/adr/: ADR-001-migracao-para-python.md  ADR-002-voto-nominal-espinha-dorsal.md  ADR-003-mapeamento-topico-hibrido.md  ADR-004-assinatura-7-eixos.md  ADR-005-caminho-indutivo.md  ADR-006-arquitetura-100-local.md  ADR-007-sessao-pesquisa-primeira-classe.md  ADR-008-modelo-base-mais-ajuste-local.md  ADR-009-embeddings-bge-m3.md  ADR-010-shell-visivel-primeiro.md  ADR-011-classificacao-multicamada.md  ADR-012-duckdb-parquet.md  ADR-013-subprocess-pid-lock.md  ADR-014-install-python-pre-instalado.md  ADR-015-ci-multi-os.md  ADR-016-uv-lock.md  ADR-017-conventional-commits.md  ADR-018-random-state-fixo.md  ADR-019-ruff-mypy-pytest.md  ADR-020-logs-loguru.md  ADR-021-fontes-auto-hospedadas.md  README.md
docs/arquitetura/: cache_e_db.md  classificacao_multicamada.md  coleta.md  convertibilidade.md  grafos_redes.md  historico_conversao.md  modelo_base.md  pipeline_integrado.md  sessao_de_pesquisa.md  ui_design_tokens.md
docs/dev/: workflow.md
docs/superpowers/specs/: 2026-04-27-hemiciclo-2-design.md
docs/usuario/: exportar_compartilhar.md  instalacao.md  interpretando_relatorio.md  primeira_pesquisa.md
scripts/: baixar_fontes.py  bootstrap.bat  bootstrap.sh  migracao_m002.py  seed_dashboard.py  validar_adr.py  validar_topicos.py
sprints/: ORDEM.md  README.md  SPRINT_S21_HIGIENIZACAO.md  SPRINT_S22_BOOTSTRAP.md  SPRINT_S23_1_FONTES_TTF_LOCAIS.md  SPRINT_S23_4_INSTALL_COM_MODELO.md  SPRINT_S23_SHELL_VISIVEL.md  SPRINT_S24B_PROPOSICOES_DETALHE.md  SPRINT_S24B_R_EXTRAIR_NORMALIZADORES.md  SPRINT_S24_COLETA_CAMARA.md  SPRINT_S25_COLETA_SENADO.md  SPRINT_S26_CACHE_DUCKDB.md  SPRINT_S27_1_VOTACOES_PROPOSICAO_ID.md  SPRINT_S27_CLASSIFICADOR_C1_C2.md  SPRINT_S28_MODELO_BASE.md  SPRINT_S29_SESSAO_RUNNER.md  SPRINT_S30_1_MAX_ITENS_PROPAGADO.md  SPRINT_S30_2_FILTROS_UFS_PARTIDOS.md  SPRINT_S30_PIPELINE_INTEGRADO.md  SPRINT_S31_DASHBOARD_SESSAO.md  SPRINT_S32_GRAFOS_REDE.md  SPRINT_S33_HISTORICO_CONVERSAO.md  SPRINT_S34_ML_CONVERTIBILIDADE.md  SPRINT_S35_EXPORT_IMPORT.md  SPRINT_S36_WINDOWS_INSTALL.md  SPRINT_S37_CI.md  SPRINT_S38_10_DATAFRAME_CANVAS_THEME.md  SPRINT_S38_3_SIGILO_AUTOR.md  SPRINT_S38_4_INICIAR_PESQUISA_REAL.md  SPRINT_S38_5_TEMA_STREAMLIT_COMPLETO.md  SPRINT_S38_6_DESPOLUICAO_JARGAO.md  SPRINT_S38_7_SCORE_QUEBRADO.md  SPRINT_S38_8_NOMES_E_LABELS.md  SPRINT_S38_RELEASE_V2.md
src/coleta/: camara.R  senado.R
src/hemiciclo/: __init__.py  __main__.py  _sessao_worker.py  cli.py  config.py
src/hemiciclo/coleta/: __init__.py  camara.py  checkpoint.py  http.py  rate_limit.py  senado.py
src/hemiciclo/dashboard/: __init__.py  app.py  componentes.py  style.css  tema.py
src/hemiciclo/etl/: __init__.py  cache.py  consolidador.py  migrations.py  schema.py  topicos.py
src/hemiciclo/modelos/: __init__.py  base.py  (+11 more)
src/lib/: api.R  ranking.R  rtf.R
src/ranking/: deputados.R  senadores.R
tests/: conftest.py  testthat.R
tests/integracao/: test_classificador_e2e.py  test_coleta_camara_e2e.py  test_coleta_camara_enriquecimento_e2e.py  test_coleta_senado_e2e.py  test_convertibilidade_e2e.py  test_dashboard_sessao_e2e.py  test_dashboard_smoke.py  test_etl_e2e.py  test_export_import_e2e.py  test_grafos_e2e.py  test_historico_e2e.py  test_install_bat_smoke.py  test_modelos_e2e.py  test_pipeline_e2e.py  test_sessao_e2e.py
tests/testthat/: helper-raiz.R  test-api.R  test-ranking.R  test-rtf.R
tests/unit/: test_classificador.py  test_classificador_c1.py  test_classificador_c2.py  test_cli.py  test_coleta_camara.py  test_coleta_camara_detalhe.py  test_coleta_checkpoint.py  test_coleta_checkpoint_senado.py  test_coleta_http.py  test_coleta_rate_limit.py  test_coleta_senado.py  test_dashboard_componentes.py  test_dashboard_fontes.py  test_dashboard_importar.py  test_dashboard_intro.py  test_dashboard_paginas.py  test_dashboard_sessao_detalhe.py  test_dashboard_timeline_conversao.py  test_dashboard_widget_convertibilidade.py  test_dashboard_widget_rede.py  test_dashboard_widgets.py  test_etl_cache.py  test_etl_consolidador.py  test_etl_migrations.py  test_etl_schema.py  test_install_bat.py  test_install_sh.py  test_modelo_sessao.py  test_modelos_base.py  test_modelos_convertibilidade.py  test_modelos_embeddings.py  test_modelos_grafo.py  test_modelos_grafo_pyvis.py  test_modelos_historico.py  test_modelos_persistencia.py  test_modelos_topicos_induzidos.py  test_pipeline_filtros.py  test_pipeline_real.py  test_scripts_migracao_m002.py  test_sentinela.py  (+10 more)
topicos/: README.md  _schema.yaml  aborto.yaml  marco_temporal.yaml  porte_armas.yaml
(+25 files in other folders)
