[project]
name = "hemiciclo"
version = "2.1.1"
description = "Plataforma cidadã de perfilamento parlamentar -- inteligência política aberta, soberana e local."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Andre Farias", email = "andre.dsbf@gmail.com" },
]
keywords = ["politica", "parlamento", "brasil", "dados-abertos", "ciencia-politica"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: Portuguese (Brazilian)",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "loguru>=0.7",
    "streamlit>=1.40",
    "plotly>=5.20",
    "httpx>=0.27",
    "tenacity>=8.2",
    "polars>=1.0",
    "lxml>=5.0",
    "duckdb>=1.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "psutil>=5.9",
    "numpy>=1.26",
    "joblib>=1.3",
    "FlagEmbedding>=1.3",
    "wordcloud>=1.9",
    "pillow>=10.0",
    "networkx>=3.2",
    "pyvis>=0.3",
    "python-louvain>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "hypothesis>=6.100",
    "respx>=0.21",
    "freezegun>=1.5",
    "types-PyYAML>=6.0",
    "types-psutil>=5.9",
]

[project.scripts]
hemiciclo = "hemiciclo.cli:app"

[project.urls]
Homepage = "https://github.com/AndreBFarias/Hemiciclo"
Repository = "https://github.com/AndreBFarias/Hemiciclo"
Issues = "https://github.com/AndreBFarias/Hemiciclo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hemiciclo"]

[tool.hatch.build.targets.wheel.force-include]
"src/hemiciclo/dashboard/static/fonts/Inter-Regular.ttf" = "hemiciclo/dashboard/static/fonts/Inter-Regular.ttf"
"src/hemiciclo/dashboard/static/fonts/Inter-Medium.ttf" = "hemiciclo/dashboard/static/fonts/Inter-Medium.ttf"
"src/hemiciclo/dashboard/static/fonts/Inter-SemiBold.ttf" = "hemiciclo/dashboard/static/fonts/Inter-SemiBold.ttf"
"src/hemiciclo/dashboard/static/fonts/Inter-Bold.ttf" = "hemiciclo/dashboard/static/fonts/Inter-Bold.ttf"
"src/hemiciclo/dashboard/static/fonts/JetBrainsMono-Regular.ttf" = "hemiciclo/dashboard/static/fonts/JetBrainsMono-Regular.ttf"
"src/hemiciclo/dashboard/static/fonts/JetBrainsMono-Bold.ttf" = "hemiciclo/dashboard/static/fonts/JetBrainsMono-Bold.ttf"
"src/hemiciclo/dashboard/static/fonts/LICENSE" = "hemiciclo/dashboard/static/fonts/LICENSE"
"src/hemiciclo/dashboard/static/fonts/README.md" = "hemiciclo/dashboard/static/fonts/README.md"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    "src/coleta",
    "src/lib",
    "src/ranking",
    "tests/testthat",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803", "N806"]
# Em modelos.base / projecao usamos `X` (matriz de features) e `X_local`
# por convencao sklearn. PCA.transform(X) e signature padrao.
"src/hemiciclo/modelos/base.py" = ["N803", "N806"]
"src/hemiciclo/modelos/projecao.py" = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/hemiciclo"]
exclude = [
    "src/coleta",
    "src/lib",
    "src/ranking",
]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "streamlit",
    "streamlit.*",
    "plotly",
    "plotly.*",
    "lxml",
    "lxml.*",
    "sklearn",
    "sklearn.*",
    "jsonschema",
    "jsonschema.*",
    "FlagEmbedding",
    "FlagEmbedding.*",
    "torch",
    "torch.*",
    "bertopic",
    "bertopic.*",
    "joblib",
    "joblib.*",
    "wordcloud",
    "wordcloud.*",
    "PIL",
    "PIL.*",
    "networkx",
    "networkx.*",
    "pyvis",
    "pyvis.*",
    "community",
    "community.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integracao"]
markers = [
    "slow: testes lentos (e2e, integracao pesada)",
]
addopts = "-ra"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/hemiciclo"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
